tests/negative/parse_stray_paren.spk
; A stray ) is reported at the line and column where it sits, and naming the
; token that was found. Nothing runs: the parse fails before the VM starts.
(print "$0" 42)
)
